# amaru-protocol

./: .gitignore  CHANGELOG.md  CLANS.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/: 2026-03-07_CLAN_DANI_PRESENTACION_v1.0.html  2026-03-07_DANI_REPLY_TO_BRUJA_JEI-SEC-001.html  2026-03-07_DANI_REPLY_TO_BRUJA_JEI-SEC-002.html  2026-03-07_DANI_RESPONSE_JEI_ALIGNMENT.html  2026-03-07_DANI_RESPONSE_TO_JEI_v1.0.html  2026-03-07_HANDSHAKE_REPORT_TO_JEI.html  ARCHITECTURE.md  BRAND-MANUAL.md  CLAN-DANI-ALIGNMENT.md  DANI-HERMES-005.md  DANI-HERMES-010.md  ETHICS.md  EVOLUTION-PLAN.md  FIRST-CONTACT-PLAN.md  GETTING-STARTED.md  GLOSSARY.md  MANIFESTO.md  (+14 more)
reference/python/: pyproject.toml
reference/python/amaru/: __init__.py  agent.py  cli.py  crypto.py  hooks.py  mcp_server.py
reference/python/hermes/: __init__.py  __main__.py  adapter.py  agent.py  agora.py  asp.py  bus.py  cli.py  config.py  crypto.py  dojo.py  hooks.py  hub.py  installer.py  integrity.py  mcp_server.py  message.py  sync.py  terminal.py
reference/python/hermes/llm/: skill.py
reference/python/tests/: test_adapter.py  test_agent.py  test_agora.py  test_asp.py  test_bilateral.py  test_cli.py  test_config.py  test_conformance.py  test_crypto.py  test_crypto_kci_v2.py  test_dojo.py  test_hooks.py  test_hub.py  test_installer.py  test_integrity.py  test_llm.py  test_mcp_server.py  test_message.py  test_qc002_p0_jei.py  test_terminal.py  test_transport.py
reference/python/tests/fixtures_jei/: __init__.py  conftest.py  crypto_fixtures.py  hub_fixtures.py  message_fixtures.py  session_fixtures.py
(+113 files in other folders)
